--- a/package.json
+++ b/package.json
@@ -46,17 +46,24 @@
     "express": "~4.15.2",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.5",
-    "express-validator": "^4.1.1",
+    "express-validator": "^4.3.0",
     "frontend-library": "git://github.com/nhsuk/frontend-library.git#0.6.0",
+    "geo-nearby": "^2.0.1",
+    "geolib": "^2.0.24",
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1",
     "gulp-postcss": "^7.0.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1",
+    "helmet": "^3.9.0",
     "marked": "^0.3.7",
+    "memory-cache": "^0.2.0",
     "morgan": "~1.8.1",
+    "ngeohash": "^0.6.0",
+    "nhsuk-bunyan-logger": "^1.6.1",
     "per-env": "^1.0.2",
     "portscanner": "^2.1.1",
+    "postcodesio-client": "^0.3.1",
     "prompt": "^1.0.0",
     "require-dir": "^0.3.2",
     "run-sequence": "^2.1.0",
