--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "require-dir": "^0.3.2",
     "run-sequence": "^2.2.1",
     "serve-favicon": "~2.4.2",
+    "source-map": "^0.6.1",
     "standard": "^10.0.3"
   },
   "devDependencies": {
